[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/ui/building_button.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="building_bg"]
bg_color = Color(0.1, 0.14, 0.1, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.25, 0.4, 0.25, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="BuildingButton" type="PanelContainer"]
script = ExtResource("1")
theme_override_styles/panel = SubResource("building_bg")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 6

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Header" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Margin/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 13

[node name="CountLabel" type="Label" parent="Margin/VBox/Header"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(0.5, 0.9, 0.5, 1)

[node name="DescLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)

[node name="BuyBtn" type="Button" parent="Margin/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 28)
